--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
             </div>
             <div>
                 <label for="diagnosticosPresuntivos" class="labelSelect label">Diagnósticos Presuntivos</label>
+                <p>Si quiere presionar más de un diagnóstico, aprete la tecla <span class="negrita">control</span></p>
                 <div class="divSelectMultiple">
                     <select multiple name="diagnosticosPresuntivos" id="diagnosticosPresuntivos" class="selectScroll select">
                         <option value="CiertasEnfInfecciosasParasitarias">Ciertas enf. infecciosas y parasitarias</option>
@@ -371,7 +372,6 @@
                     <select class="select" id="modoTransporteLesionado" name="modoTransporteLesionado" required>
                         <option value="">Seleccione</option>
                         <option value="peatonV1V9">Peatón V01 a V09</option>
-                        <option value="animal">Animal</option>
                         <option value="ciclistaV10V19">Ciclista V10 a V19</option>
                         <option value="motociclistaV20V29">Motociclista V20 a V29</option>
                         <option value="ocupanteAutomovilV40V49">Ocupante de automóvil V40 a V49</option>
