Prueba inicio sesion

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 </head>
 <body>
     <main class="body">
-        <header class="header">LOGO</header>
+        <header class="header">
+            <div class="isologo">
+                <img src="./images/Isologo.png" alt="isologo">
+            </div>
+            <div class="divUsuarioSesion">
+                <p>Has iniciado sesión como <span class="nombreUsuario">Persona</span></p>
+                <button class="btnSesion">
+                    Cerrar sesión
+                </button>
+            </div>
+        </header>
     <!-- <section id="progress">
         <div>
             barra que progresa
@@ -22,6 +32,9 @@
             <p>1/52 Campos completados</p>
         </div>
     </section> -->
+        <div class="divLogo">
+            <img src="./images/Logo.png" alt="logo">
+        </div>
         <form id="userForm" class="userForm">
         <h1 class="h1">Encuesta de Relevamiento</h1>
         <section id="inicioEncuesta">
